# fnal-art

./: .gitignore  CMakeLists.txt  README  README.md  altCMakeLists.cmake  altCMakeLists.txt  patch
Modules/: ArtCPack.cmake  ArtDictionary.cmake  BuildDictionary.cmake  CMakeLists.txt  CetRootCint.cmake  CetTest.cmake  CheckClassVersion.cmake  FindCppUnit.cmake  FindSQLite3.cmake  README.md  RunAndCompare.cmake  altCMakeLists.cmake  artConfig.cmake.in  artInternalTools.cmake  artTools.cmake  cet_test_functions.sh  portableArtDictionary.cmake  portableCMakeLists.cmake
art/: CMakeLists.txt  Dependencies.dot  Dependencies.md  altCMakeLists.cmake
art/Framework/: CMakeLists.txt  altCMakeLists.cmake
art/Framework/Art/: CMakeLists.txt  altCMakeLists.cmake
art/Framework/Art/detail/md-collector/: MetadataCollectorForService.h
art/Framework/Core/: CMakeLists.txt  GroupSelectorRules.cc  PathManager.cc  Schedule.h  altCMakeLists.cmake  altCMakeLists.txt
art/Framework/EventProcessor/: CMakeLists.txt  altCMakeLists.cmake
art/Framework/IO/: CMakeLists.txt  altCMakeLists.cmake
art/Framework/IO/Catalog/: CMakeLists.txt  altCMakeLists.cmake
art/Framework/IO/ProductMix/: CMakeLists.txt  altCMakeLists.cmake
art/Framework/IO/Root/: CMakeLists.txt  altCMakeLists.cmake
art/Framework/IO/Sources/: CMakeLists.txt  altCMakeLists.cmake
art/Framework/Modules/: CMakeLists.txt  altCMakeLists.cmake
art/Framework/Principal/: CMakeLists.txt  altCMakeLists.cmake  altCMakeLists.txt
art/Framework/Services/: CMakeLists.txt  altCMakeLists.cmake  altCMakeLists.txt
art/Framework/Services/FileServiceInterfaces/: CMakeLists.txt  altCMakeLists.cmake  altCMakeLists.txt
art/Framework/Services/Optional/: CMakeLists.txt  RandomNumberGenerator_service.cc  Tracer_service.cc  altCMakeLists.cmake  altCMakeLists.txt
art/Framework/Services/Registry/: CMakeLists.txt  altCMakeLists.cmake
art/Framework/Services/System/: CMakeLists.txt  FileCatalogMetadata.h  altCMakeLists.cmake
art/Framework/Services/UserInteraction/: CMakeLists.txt  altCMakeLists.cmake
art/Ntuple/: CMakeLists.txt  altCMakeLists.cmake
art/Persistency/: CMakeLists.txt  altCMakeLists.cmake
art/Persistency/CLHEPDictionaries/: CMakeLists.txt
art/Persistency/CetlibDictionaries/: CMakeLists.txt  altCMakeLists.cmake
art/Persistency/Common/: CMakeLists.txt  altCMakeLists.cmake
art/Persistency/FhiclCppDictionaries/: CMakeLists.txt  altCMakeLists.cmake
art/Persistency/Provenance/: CMakeLists.txt  altCMakeLists.cmake
art/Persistency/RootDB/: CMakeLists.txt  altCMakeLists.txt  tkeyvfs.cc
art/Persistency/StdDictionaries/: CMakeLists.txt  altCMakeLists.cmake
art/Persistency/WrappedStdDictionaries/: CMakeLists.txt  altCMakeLists.cmake
art/Utilities/: CMakeLists.txt  SAMMetadataTranslators.h  altCMakeLists.cmake  altCMakeLists.txt
art/Version/: CMakeLists.txt  altCMakeLists.cmake
doc/: Art.doxyfile.in  CMakeLists.txt
test/: .altCMakeLists.cmake.swp  CMakeLists.txt  altCMakeLists.cmake
test/Framework/Art/: CMakeLists.txt
test/Framework/Core/: CMakeLists.txt
test/Framework/Core/stubs/: CMakeLists.txt
test/Framework/EventProcessor/: CMakeLists.txt  Statemachine_t.sh
test/Framework/IO/: CMakeLists.txt  altCMakeLists.cmake
test/Framework/IO/Common/: CMakeLists.txt
test/Framework/IO/Root/: .altCMakeLists.cmake.swp  CMakeLists.txt  altCMakeLists.cmake
test/Framework/Modules/: CMakeLists.txt
test/Framework/Principal/: CMakeLists.txt  altCMakeLists.cmake
test/Framework/Services/Basic/: CMakeLists.txt  altCMakeLists.cmake
test/Framework/Services/Message/: CMakeLists.txt
test/Framework/Services/Optional/: CMakeLists.txt  altCMakeLists.cmake  altCMakeLists.txt
test/Framework/Services/Optional/detail/: CMakeLists.txt  altCMakeLists.cmake
test/Framework/Services/Registry/: CMakeLists.txt  altCMakeLists.cmake
test/Framework/Services/Registry/old/: CMakeLists.txt
test/Framework/Services/System/: CMakeLists.txt
test/Integration/: CMakeLists.txt  alt-legacy-tests.cmake  altCMakeLists.cmake
test/Integration/event-shape/: CMakeLists.txt  altCMakeLists.cmake
test/Integration/high-memory/: CMakeLists.txt  altCMakeLists.cmake
test/Integration/oldtest/: CMakeLists.txt
test/Ntuple/: CMakeLists.txt  altCMakeLists.cmake
test/Persistency/Common/: CMakeLists.txt
test/Persistency/Provenance/: CMakeLists.txt  altCMakeLists.cmake
test/Persistency/RootDB/: CMakeLists.txt  altCMakeLists.txt
test/TestObjects/: CMakeLists.txt
test/Utilities/: CMakeLists.txt  altCMakeLists.cmake
test/Version/: CMakeLists.txt
test/tbb/: CMakeLists.txt  altCMakeLists.cmake  altCMakeLists.txt
tools/: CMakeLists.txt  altCMakeLists.cmake  checkClassVersion
ups/: CMakeLists.txt
